# Master-TFE

./: .gitignore  README.md
T-DEED/: README.md  evaluate_tdeed_challenge.py  inference_test.py  testmps.py
T-DEED/model/: model.py
Valuing/: ComplexFeatures.py  base_Veap.py  custom_vaep.py  customvaeptrain.py
Valuing/notebooks/: EDA.ipynb
soccernet/: generateVideo.py  temporaire.py
soccernet/Finetuning/: convert_yolo_data.py  data.yaml  dataloader.py  evaluate_tiles_valid.py  generate_dataset.py  main.py  resize.py  slice_dataset.py  test.py  testing_inference.py  visual_ball.py  yolo_model.py
soccernet/OCR/: jersey_recognition_module.py  main.py
soccernet/evalCalibration/: CameraFeatureExtractor.py  c_est_dur_la_calibration.py  confidence_model.py  corel_line_calibration.py  eval_keypoint.py  generateGTPitch.py  jsp.py  post_processing_camera_params.py  statcalibration.py  (+1 more)
soccernet/sn-gamestate/: pyproject.toml
soccernet/sn-gamestate/sn_gamestate/calibration/: postprocess_calib.py  tvcalib.py
soccernet/sn-gamestate/sn_gamestate/configs/: soccernet.yaml
soccernet/sn-gamestate/sn_gamestate/configs/modules/jersey_number_detect/: customocr.yaml  macocr.yaml
soccernet/sn-gamestate/sn_gamestate/configs/modules/post_calibration/: calibrationrefiner.yaml
soccernet/sn-gamestate/sn_gamestate/configs/visualization/: gamestate.yaml
soccernet/sn-gamestate/sn_gamestate/jersey/: custom_ocr.py  easyocr_api.py  macocr_api.py
soccernet/sn-gamestate/sn_gamestate/reid/: prtreid_api.py
soccernet/sn-gamestate/sn_gamestate/visualization/: pitch_visualization.py
(+38 files in other folders)
